--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "startup-nextjs-template",
-  "version": "2.2.0",
+  "name": "youjin-power-system",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,12 +17,20 @@
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.3",
     "postcss": "^8.5.3",
-    "@tailwindcss/postcss": "^4.1.3"
+    "@tailwindcss/postcss": "^4.1.3",
+    "@supabase/supabase-js": "^2.38.2",
+    "next-i18next": "^15.2.0",
+    "i18next": "^23.10.1",
+    "react-i18next": "^14.1.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.9",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.0",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.17",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.6.11",
